# rs-git-fsmonitor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
Formula/: rs-git-fsmonitor.rb
habitat/: plan.sh
src/: main.rs
