[package]
name = "rs-git-fsmonitor"
version = "0.3.0"
authors = [
    "Jason Gavris <jgavris@gmail.com>",
    "Matt Kline <matt@bitbashing.io>",
]
edition = "2018"

[dependencies]
anyhow = "1.0.51"
serde = "1.0.117"
serde_json = "1.0.59"

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
