[package]
name = "rs-git-fsmonitor"
version = "0.2.0"
authors = [
  "Jason Gavris <jgavris@gmail.com>",
  "Matt Kline <matt@bitbashing.io>",
]
edition = "2018"

[lints.clippy]
complexity = "warn"
nursery = "warn"
pedantic = "warn"
suspicious = "warn"
perf = "warn"

[dependencies]
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
